add card and flip it

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>jQuery ES6 Flash Cards</h1>
-    <button>Add Card</button>
+    <button id="add">Add Card</button>
     <div id="cards">
       <div id="card1" class="card c1">
         <div class="front">
