--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <button class="c2 submit">Submit</button>
           </div>
         </div>
-        <button>Delete</button> 
+        <button class="c2 delete">Delete</button> 
       </div>
       <div id="card1" class="c1 card">
         <div class="c1 front">
@@ -48,7 +48,7 @@
               <button class="c1 submit">Submit</button>
             </div>
         </div>
-        <button>Delete</button>
+        <button class="c1 delete">Delete</button>
       </div>
     </div>
 
