--- a/index.html
+++ b/index.html
@@ -8,11 +8,158 @@
     <h1>jQuery ES6 Flash Cards</h1>
     <button id="add">Add Card</button>
     <div id="cards">
+      <div id="card9" class="c9 card">
+        <div class="c9 front">
+          <button class="c9 show-back">Show Back</button>
+          <button class="c9 edit">Edit</button>
+          <h2>String Interpolation</h2>
+          <div class="c9 change">
+            <input type="text" />
+            <button class="c9 submit">Submit</button>
+          </div>
+        </div>
+        <div class="c9 back">
+          <button class="c9 show-front">Show Front</button>
+          <button class="c9 edit">Edit</button>
+          <p></p>
+          <div class="c9 change">
+            <textarea></textarea>
+            <button class="c9 submit">Submit</button>
+          </div>
+        </div>
+        <button class="c9 delete">Delete</button> 
+      </div>
+      <div id="card8" class="c8 card">
+        <div class="c8 front">
+          <button class="c8 show-back">Show Back</button>
+          <button class="c8 edit">Edit</button>
+          <h2>Object Destructuring</h2>
+          <div class="c8 change">
+            <input type="text" />
+            <button class="c8 submit">Submit</button>
+          </div>
+        </div>
+        <div class="c8 back">
+          <button class="c8 show-front">Show Front</button>
+          <button class="c8 edit">Edit</button>
+          <p></p>
+          <div class="c8 change">
+            <textarea></textarea>
+            <button class="c8 submit">Submit</button>
+          </div>
+        </div>
+        <button class="c8 delete">Delete</button> 
+      </div>
+      <div id="card7" class="c7 card">
+        <div class="c7 front">
+          <button class="c7 show-back">Show Back</button>
+          <button class="c7 edit">Edit</button>
+          <h2>Object Initializer</h2>
+          <div class="c7 change">
+            <input type="text" />
+            <button class="c7 submit">Submit</button>
+          </div>
+        </div>
+        <div class="c7 back">
+          <button class="c7 show-front">Show Front</button>
+          <button class="c7 edit">Edit</button>
+          <p></p>
+          <div class="c7 change">
+            <textarea></textarea>
+            <button class="c7 submit">Submit</button>
+          </div>
+        </div>
+        <button class="c7 delete">Delete</button> 
+      </div>
+      <div id="card6" class="c6 card">
+        <div class="c6 front">
+          <button class="c6 show-back">Show Back</button>
+          <button class="c6 edit">Edit</button>
+          <h2>Arrow Functions</h2>
+          <div class="c6 change">
+            <input type="text" />
+            <button class="c6 submit">Submit</button>
+          </div>
+        </div>
+        <div class="c6 back">
+          <button class="c6 show-front">Show Front</button>
+          <button class="c6 edit">Edit</button>
+          <p></p>
+          <div class="c6 change">
+            <textarea></textarea>
+            <button class="c6 submit">Submit</button>
+          </div>
+        </div>
+        <button class="c6 delete">Delete</button> 
+      </div>
+      <div id="card5" class="c5 card">
+        <div class="c5 front">
+          <button class="c5 show-back">Show Back</button>
+          <button class="c5 edit">Edit</button>
+          <h2>Spread Operators</h2>
+          <div class="c5 change">
+            <input type="text" />
+            <button class="c5 submit">Submit</button>
+          </div>
+        </div>
+        <div class="c5 back">
+          <button class="c5 show-front">Show Front</button>
+          <button class="c5 edit">Edit</button>
+          <p></p>
+          <div class="c5 change">
+            <textarea></textarea>
+            <button class="c5 submit">Submit</button>
+          </div>
+        </div>
+        <button class="c5 delete">Delete</button> 
+      </div>
+      <div id="card4" class="c4 card">
+        <div class="c4 front">
+          <button class="c4 show-back">Show Back</button>
+          <button class="c4 edit">Edit</button>
+          <h2>Reset Params</h2>
+          <div class="c4 change">
+            <input type="text" />
+            <button class="c4 submit">Submit</button>
+          </div>
+        </div>
+        <div class="c4 back">
+          <button class="c4 show-front">Show Front</button>
+          <button class="c4 edit">Edit</button>
+          <p></p>
+          <div class="c4 change">
+            <textarea></textarea>
+            <button class="c4 submit">Submit</button>
+          </div>
+        </div>
+        <button class="c4 delete">Delete</button> 
+      </div>
+      <div id="card3" class="c3 card">
+        <div class="c3 front">
+          <button class="c3 show-back">Show Back</button>
+          <button class="c3 edit">Edit</button>
+          <h2>const</h2>
+          <div class="c3 change">
+            <input type="text" />
+            <button class="c3 submit">Submit</button>
+          </div>
+        </div>
+        <div class="c3 back">
+          <button class="c3 show-front">Show Front</button>
+          <button class="c3 edit">Edit</button>
+          <p></p>
+          <div class="c3 change">
+            <textarea></textarea>
+            <button class="c3 submit">Submit</button>
+          </div>
+        </div>
+        <button class="c3 delete">Delete</button> 
+      </div>
       <div id="card2" class="c2 card">
         <div class="c2 front">
           <button class="c2 show-back">Show Back</button>
           <button class="c2 edit">Edit</button>
-          <h2>L</h2>
+          <h2>let</h2>
           <div class="c2 change">
             <input type="text" />
             <button class="c2 submit">Submit</button>
@@ -21,7 +168,7 @@
         <div class="c2 back">
           <button class="c2 show-front">Show Front</button>
           <button class="c2 edit">Edit</button>
-          <p>I</p>
+          <p></p>
           <div class="c2 change">
             <textarea></textarea>
             <button class="c2 submit">Submit</button>
